--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.4.1"
+    "@tailwindcss/vite": "^4.0.9",
+    "astro": "^5.4.1",
+    "lucide-astro": "^0.477.0",
+    "plyr": "^3.7.8",
+    "tailwindcss": "^4.0.9"
+  },
+  "devDependencies": {
+    "daisyui": "^5.0.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "prettier": "^3.5.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "stylelint": "^16.15.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-standard": "^37.0.0"
   }
 }
