--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.5",
     "@tailwindcss/vite": "^4.0.9",
     "astro": "^5.4.1",
     "lucide-astro": "^0.477.0",
+    "lucide-svelte": "^0.477.0",
     "plyr": "^3.7.8",
-    "tailwindcss": "^4.0.9"
+    "svelte": "^5.22.5",
+    "tailwindcss": "^4.0.9",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "daisyui": "^5.0.0",
