--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.3",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.8",
     "astro": "^5.4.1",
     "lucide-astro": "^0.477.0",
     "plyr": "^3.7.8",
