feat(.env.development): agregar URL del servidor SSE para el desarrollo

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 PUBLIC_VIDEO_LIST_API="http://max/cam/api.php"
 PUBLIC_BASE_PATH="http://max/cam/files/"
+PUBLIC_SSE_SERVER="http://localhost:3000/sse.php"
